product_docs/docs/bart/2.5/bart_inst/04_upgrading_bart.mdx
---
title: "Upgrading BART"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.5.4/upgrading_bart.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.5.5/upgrading_bart.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/installation-getting-started/installation-upgrade-guide/2.5.7/upgrading_bart.html"
---

<div id="upgrade" class="registered_link"></div>

This section outlines the process of upgrading BART from an existing version to the latest version.

**Upgrade Restrictions**

The following restrictions apply with regard to previous BART versions.

-   You can take incremental backups using the latest version only when the parent backup (full or incremental backup) has also been taken with the latest version.
-   Using the latest version, you can restore incremental backups that are taken only with the latest version of BART. However, using the latest version you can restore full backups that were taken with older versions.

<div id="upgrading_from_older_versions_except_2_0_to_latest_versions_of_bart" class="registered_link"></div>

## Upgrading from Older Versions of BART

Perform the following steps to upgrade from older versions of BART to the latest version:

**Step 1:** Assume the identity of the BART user account and invoke the following command to stop the BART WAL scanner program (`bart-scanner`):

```text
bart-scanner STOP
```

**Step 2:** As the `root` user, upgrade to the latest BART version with the `yum upgrade` command.

-   To upgrade the BART RPM package directly from the *EDB Yum Repository* website, specify only the package name:

    On CentOS 7:

    ```text
    yum upgrade edb-bart
    ```

    You can also use a downloaded RPM package file to upgrade. To use a downloaded BART RPM package file to upgrade, use the `yum` command, specifying the complete RPM package file name:

    ```text
    yum upgrade edb-bart-x.y.z rhel7.x86_64.rpm
    ```

    Where x denotes the major version of BART, and y and z denotes the minor version.

    On a Debian or Ubuntu Host:
    On a Debian or Ubuntu Host:

    ```text
    apt-get upgrade edb-bart
    ```

    On a SLES Host:

    ```text
    zypper update edb-bart
    ```

**Step 3:** Repeat the process described in this section to upgrade to the latest BART version on each remote hosts where an incremental backup will be restored.

For additional information about restoration of incremental backups on remote hosts, see the EDB Backup and Recovery User Guide available at the [EDB website](/bart/latest/bart_user/).

**Step 4:** If the `bart --version` command returns an error stating the `PATH` is not available after switching from `root` user to another BART user account, adjust the setting of the `PATH` environment variable to include the location of the BART x.y.z executable (the `bin` subdirectory) in the `~/.bashrc` or `~/.bash_profile` files of the following user accounts:

-   The BART user account on the BART host.
-   The remote user account on the remote host to which incremental backups are to be restored. For details, see the EDB Backup and Recovery User Guide available at the [EDB website](/bart/latest/bart_user/).

The `PATH` setting should be the same as set for BART x.y.z since all versions use `/usr/edb/bart/bin`.

!!! Note
    After upgrading to the latest BART version, you must take a new full backup of your system before performing an incremental backup.

<div id="upgrading_from_bart_2_0" class="registered_link"></div>