product_docs/docs/bart/2.6/bart_inst/04_upgrading_bart.mdx
---
title: "Upgrading BART"
---

<div id="upgrade" class="registered_link"></div>

This section outlines the process of upgrading BART from an existing version to the latest version.

-   [Upgrading from BART 2.0](#upgrading-from-bart-20) describes the upgrade process from BART 2.0 to the latest version.
-   <span class="title-ref">Upgrading from Older Versions of BART (except 2.0) &lt;upgrading\_from\_older\_versions\_(except\_2.0)\_to\_latest\_versions\_of\_bart&gt;</span> describes the upgrade process from previous BART versions (except 2.0) to the latest version.

**Upgrade Restrictions**

The following restrictions apply with regard to previous BART versions.

-   You can take incremental backups using the latest version only when the parent backup (full or incremental backup) has also been taken with the latest version.
-   Using the latest version, you can restore incremental backups that are taken only with the latest version of BART. However, using the latest version you can restore full backups that were taken with older versions.

<div id="upgrading_from_older_versions_except_2_0_to_latest_versions_of_bart" class="registered_link"></div>

## Upgrading from Older Versions of BART (except 2.0)

Perform the following steps to upgrade from older versions of BART (except 2.0) to the latest version:

**Step 1:** Assume the identity of the BART user account and invoke the following command to stop the BART WAL scanner program (`bart-scanner`):

> ```text
> bart-scanner STOP
> ```

**Step 2:** As the `root` user, upgrade to the latest BART version with the `yum upgrade` command.

-   To upgrade the BART RPM package directly from the *EDB Yum Repository* website, specify only the package name:

    On CentOS 6 and 7:

    ```text
    yum upgrade edb-bart
    ```

    You can also use a downloaded RPM package file to upgrade. To use a downloaded BART RPM package file to upgrade, use the `yum` command, specifying the complete RPM package file name:

    ```text
    yum upgrade edb-bart-2.6 rhel7.x86_64.rpm
    ```

**Step 3:** Repeat the process described in this section to upgrade to the latest BART version on each remote hosts where an incremental backup will be restored.

For additional information about restoration of incremental backups on remote hosts, see the EDB Postgres Backup and Recovery User Guide available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

**Step 4:** If the `bart --version` command returns an error stating the `PATH` is not available after switching from `root` user to another BART user account, adjust the setting of the `PATH` environment variable to include the location of the BART 2.6 executable (the `bin` subdirectory) in the `~/.bashrc` or `~/.bash_profile` files of the following user accounts:

-   The BART user account on the BART host.
-   The remote user account on the remote host to which incremental backups are to be restored. For details, see the EDB Postgres Backup and Recovery User Guide available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

The `PATH` setting should be the same as set for BART 2.6 since all versions use `/usr/edb/bart/bin`.

<div class="note">

<div class="title">

Note

</div>

After upgrading to the latest BART version, you must take a new full backup of your system before performing an incremental backup.

</div>

<div id="upgrading_from_bart_2_0" class="registered_link"></div>

## Upgrading from BART 2.0

Perform the following steps to upgrade BART 2.0 to the latest version of BART:

**Step 1:** Install the latest version of BART. For information about how to install, see [installing BART](../02_installing_bart/#installing_bart_using_an_rpm_package).

**Step 2:** Save a copy of your BART 2.0 configuration file. The default location of the BART 2.0 configuration file is `/usr/edb/bart2.0/etc/bart.cfg`.

**Step 3:** Invoke the following command to remove BART 2.0:

> On CentOS 6 and 7:
>
> ```text
> yum remove edb-bart20
> ```

**Step 4:** Place the BART 2.0 configuration file (`bart.cfg`) that you saved in Step 2 in the newly created `/usr/edb/bart/etc` directory. You can use many of the same configuration parameters for BART 2.6, but note that you must use a new directory for the BART backup catalog. A new set of full backups and incremental backups taken using BART 2.6 must be stored in a new BART backup catalog.

To specify an alternative configuration file name or location, use the `-c` option with BART subcommands. For more information about the `-c` option, see the EDB Postgres Backup and Recovery Us available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

<div class="note">

<div class="title">

Note

</div>

The `bart.cfg` configuration file is only required on the BART 2.6 host from which you will invoke BART subcommands. BART does not require the `bart.cfg` file on hosts on which an incremental backup will be restored.

</div>

**Step 5:** Adjust the setting of the `PATH` environment variable to include the location of the BART 2.6 executable (the `bin` subdirectory) in the `~/.bashrc` or `~/.bash_profile` files for the following user accounts:

-   The BART user account on the BART host.
-   The user account on the remote host to which incremental backups will be restored. For details, see the EDB Postgres Backup and Recovery User Guide available at the [EDB website](https://www.enterprisedb.com/edb-docs/).

**Step 6:** Perform the BART 2.6 installation and BART 2.0 removal process on each remote host on which an incremental backup was restored using BART 2.0.

<div class="note">

<div class="title">

Note

</div>

After upgrading to the latest BART version, you must take a new full backup of your system before performing an incremental backup.

</div>
